--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         <img src="assets/img/logo-yukshopping2.png" class="img-fluid rounded-2" alt="...">
       </div>
       <div class="col">
-        <img src="assets/img/logo-jobb.png" class="img-fluid rounded-2" alt="..." style="width: 70%;">
+        <img src="assets/img/logo-jobb.png" class="img-fluid rounded-2" alt="...">
       </div>
       <div class="col">
         <img src="assets/img/logo-medico.png" class="img-fluid rounded-2" alt="...">
@@ -294,13 +294,13 @@
         <img src="assets/img/logo-swoosh.png" class="img-fluid rounded-2" alt="...">
       </div>
       <div class="col">
-        <img src="assets/img/logo-monster.png" class="img-fluid rounded-2" alt="..." style="width: 50%;">
+        <img src="assets/img/logo-monster.png" class="img-fluid rounded-2" alt="...">
       </div>
       <div class="col">
-        <img src="assets/img/logo-zao.png" class="img-fluid rounded-2" alt="..." style="width: 70%;">
+        <img src="assets/img/logo-zao.png" class="img-fluid rounded-2" alt="...">
       </div>
       <div class="col">
-        <img src="assets/img/logo-Embun.png" class="img-fluid rounded-2" alt="..." style="width: 50%;">
+        <img src="assets/img/logo-Embun.png" class="img-fluid rounded-2" alt="...">
       </div>
     </div>
     <p class="sub-clients text fw-light text-center text-dark">Sudah banyak perusahaan yang telah mempercayakan brandnya untuk dikelola oleh agensi kami. Ayo mulai wujudkan brand impian mu bersama kami!</p>
@@ -386,10 +386,10 @@
   <!-- ARTICLE -->
   <section class="container-fluid" id="article">
     <p class="title fs-1 fw-bold">Latest Article</p>
-    <div class="container article owl-carousel" style="gap: 2%;">
+    <div class="article owl-carousel" style="gap: 2%;">
     <div class="card">
       <img src="assets/img/article.jpg" alt="article-1">
-      <div class="card-body text-center">
+      <div class="card-body text-center text">
         <div class="title fs-5 fw-semibold mb-2">Hello World!</div>
         <div class="text lh-base fw-light">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum unde voluptates aperiam quam rem, aliquid magnam consequuntur quod fugiat labore laudantium odit praesentium ut atque rerum vel commodi quidem quos.
@@ -400,7 +400,7 @@
     </div>
     <div class="card">
       <img src="assets/img/article.jpg" alt="article-2">
-      <div class="card-body text-center">
+      <div class="card-body text-center text">
         <div class="title fs-5 fw-semibold mb-2">Hello World!</div>
         <div class="text lh-base fw-light">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum unde voluptates aperiam quam rem, aliquid magnam consequuntur quod fugiat labore laudantium odit praesentium ut atque rerum vel commodi quidem quos.
@@ -411,13 +411,13 @@
     </div>
     <div class="card">
       <img src="assets/img/article.jpg" alt="article-3">
-      <div class="card-body text-center">
+      <div class="card-body text-center text">
         <div class="title fs-5 fw-semibold mb-2">Hello World!</div>
         <div class="text lh-base fw-light">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum unde voluptates aperiam quam rem, aliquid magnam consequuntur quod fugiat labore laudantium odit praesentium ut atque rerum vel commodi quidem quos.
         </div>
         <br>
-        <a href="article-3.html" class="card-link text text-decoration-none fw-light">READ MORE</a>
+        <a href="article-3.html" class="card-link text-decoration-none fw-light">READ MORE</a>
       </div>
     </div>
   </div>
@@ -454,7 +454,7 @@
   <section class="container-fluid contact bg-grey" id="contact">
     <p class="title fs-1 fw-bold">Let’s discuss your project!</p>
     <div class="row r-maps">
-    <div class="col text">
+    <div class="col c-text">
       <div class="row r-info">
         <div class="col icon">
           <i class="fa-brands fa-whatsapp" style="color: #0659a7; font-size: 25px;"></i>
