--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
             <div class="col icon">
               <i class="fa-brands fa-whatsapp" style="color: #0659a7; font-size: 25px"></i>
             </div>
-            <div class="col">
+            <div class="col text-decoration-none">
               <p>021-56920213</p>
             </div>
           </div>
