--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div class="text lh-base fw-light">
               Social media has become a crucial component of modern business. With the help of TRICOM, you can effectively and economically engage with customers, create brand recognition, and boost sales.
             </div>
-            <a href="social-media.html" class="btn btn-primary text text-white rounded-5 border-0 fw-light">Learn More</a>
+            <a href="social-media.html" class="btn btn-primary text text-white text-center rounded-5 border-0 fw-light">Learn More</a>
           </div>
         </div>
         <div class="card">
@@ -199,7 +199,7 @@
             <div class="text lh-base fw-light">
               Photography has become a crucial component of modern business. With the help of TRICOM, you can effectively and economically engage with customers, create brand recognition, and boost sales.
             </div>
-            <a href="photography.html" class="btn btn-primary text text-white rounded-5 border-0 fw-light">Learn More</a>
+            <a href="photography.html" class="btn btn-primary text text-white text-center rounded-5 border-0 fw-light">Learn More</a>
           </div>
         </div>
         <div class="card">
@@ -207,7 +207,7 @@
           <div class="card-body text-center d-grid gap-2">
             <div class="c-title fw-semibold">Video Production</div>
             <div class="text lh-base fw-light">Video production has become a crucial component of modern business. With the help of TRICOM, you can effectively and economically engage with customers, create brand recognition.</div>
-            <a href="video-production.html" class="btn btn-primary text text-white rounded-5 border-0 fw-light">Learn More</a>
+            <a href="video-production.html" class="btn btn-primary text text-center text-white rounded-5 border-0 fw-light">Learn More</a>
           </div>
         </div>
         <div class="card">
@@ -217,7 +217,7 @@
             <div class="text lh-base fw-light">
               Web design has become a crucial component of modern business. With the help of TRICOM, you can effectively and economically engage with customers, create brand recognition, and boost sales.
             </div>
-            <a href="web-design.html" class="btn btn-primary text text-white rounded-5 border-0 fw-light">Learn More</a>
+            <a href="web-design.html" class="btn btn-primary text text-white text-center rounded-5 border-0 fw-light">Learn More</a>
           </div>
         </div>
       </div>
@@ -379,7 +379,7 @@
                 dots: true,
               },
               1000: {
-                items: 1,
+                items: 3,
                 // nav:true,
                 loop: false,
                 dots: true,
@@ -509,62 +509,62 @@
     <!-- CONTACT END -->
 
     <!-- FOOTER -->
-    <!-- <footer class="footer">
-        <div class="row trisula text-center d-block">
-          <div class="col">
-            <p class="text-white text">Powered by</p>
-          </div>
-          <div class="col logo">
-            <img src="assets/img/trisula-corp.png" alt="" />
-          </div>
+    <footer class="footer">
+      <div class="row">
+        <div class="col-4 col-sm-0 mb-2 ms-4">
+          <!-- <p class="text text-white mb-3" style="font-size: 0.8rem;">Powered by</p> -->
+          <img src="assets/img/trisula-corp.png" alt="" style="width: 33%" />
         </div>
-        <br />
-        <div class="row">
-          <p class="text text-white text-bold"></p>
-        </div>
-        <br>
-        <div class="row r-copyright">
-          <div class="col">
-            <p class="copyright text text-white">
-              &copy;
-              <script>
-                document.write(new Date().getFullYear());
-              </script>
-              Tricom. All Rights Reserved
-            </p>
-          </div>
-          <br />
-          <div class="col sosmed">
-            <a href="https://www.instagram.com"><i class="bi bi-instagram" style="font-size: 25px; color: #ffffff"></i></a>
-            <a href="https://www.youtube.com"><i class="bi bi-youtube" style="font-size: 25px; color: #ffffff"></i></a>
-          </div>
-        </div>
-    </footer> -->
-    <!-- FOOTER END -->
 
-    <div class="footer d-flex">
-      <div class="row trisula d-block">
-        <p class="text text-white" style="font-size: 0.8rem;">Powered by</p>
-        <img src="assets/img/trisula-corp.png" alt="" style="width: 15%" />
+        <div class="col-3 mb-2 page">
+          <h5 class="title text-white mb-4">Services</h5>
+          <ul class="list-group">
+            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text-decoration-none text-white" href="social-media.html">Social Media</a></li>
+            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text-decoration-none text-white" href="social-media.html">Photography</a></li>
+            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text-decoration-none text-white" href="social-media.html">Video Production</a></li>
+            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text-decoration-none text-white" href="social-media.html">Web Design</a></li>
+          </ul>
+        </div>
+
+        <div class="col-3 mb-2 page">
+          <h5 class="title text-white mb-4">Company</h5>
+          <ul class="list-group">
+            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text-decoration-none text-white" href="social-media.html">About Us</a></li>
+            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text-decoration-none text-white" href="social-media.html">Blog</a></li>
+          </ul>
+        </div>
+
+        <div class="col mb-2 page">
+          <h5 class="title text-white mb-4">Contact</h5>
+          <ul class="list-group">
+            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text-decoration-none text-white" href="social-media.html">Get in Touch</a></li>
+          </ul>
+        </div>
+
+        <hr class="text-success text-white" />
+
+        <div class="row r-copyright">
+        <div class="col-10 me-5">
+          <p class="copyright text-white">
+            &copy;
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            Tricom. All Rights Reserved
+          </p>
+        </div>
+
+        <div class="col">
+          <ul class="social-icons my-3 ps-0">
+            <a class="instagram text-white me-3" style="font-size: 1.2rem" href="https://www.instagram.com"><i class="bi bi-instagram"></i></a>
+            <a class="youtube text-white" style="font-size: 1.3rem" href="https://www.youtube.com"><i class="bi bi-youtube"></i></a>
+          </ul>
+        </div>
       </div>
-      <div class="row pages">
-        <p class="title text-white text-bold">Pages</p>
-        <a class="text-white text-decoration-none" href="#">About Us</a>
-        <a class="text-white text-decoration-none" href="#">Testimony</a>
-        <a class="text-white text-decoration-none" href="#">Our Blog</a>
+
       </div>
-      <div class="row services">
-        <p class="title text-white text-bold">Services</p>
-        <a class="text-white text-decoration-none" href="#">Social Media</a>
-        <a class="text-white text-decoration-none" href="#">Photography</a>
-        <a class="text-white text-decoration-none" href="#">Video Production</a>
-        <a class="text-white text-decoration-none" href="#">Web Design</a>
-      </div>
-      <div class="row contact">
-        <p class="text-white text-decoration-none" class="title text-white text-bold">Contact</p>
-        <a class="text-white text-decoration-none" href="#">Get in Touch</a>
-      </div>
-    </div>
+    </footer>
+    <!-- FOOTER END -->
 
     <script src="assets/js/services.js"></script>
   </body>
