--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <!-- OUR SERVICES -->
     <section class="container-fluid services bg-grey" id="services">
-      <p class="title fs-1 fw-bold">Our Services</p>
+      <p class="title fs-1 fw-semibold">Our Services</p>
       <div class="row" id="categories" data-aos="fade-right">
         <div class="col-md-3">
           <div class="card text-center" id="btncard">
@@ -180,7 +180,7 @@
 
     <!--SERVICES MOBILE VERSION -->
     <section class="container-fluid mobile-services bg-grey">
-      <p class="title fs-1 fw-bold">Our Services</p>
+      <p class="title fs-1 fw-semibold">Our Services</p>
       <div class="services-content owl-carousel">
         <div class="card">
           <img src="assets/img/photography.jpg" style="height: 25rem" alt="" />
@@ -258,7 +258,7 @@
 
     <!-- OUR CLIENTS -->
     <section class="container-fluid our-clients" id="our-clients" data-aos="zoom-in">
-      <p class="title fs-1 fw-bold text-center">Our Satisfied Clients</p>
+      <p class="title fs-1 fw-semibold text-center">Our Satisfied Clients</p>
       <p class="sub-clients text fw-light text-center text-dark">We've have the pleasesure of working with many amazing clients.</p>
       <div class="brand d-grid">
         <div class="col my-1">
@@ -313,7 +313,7 @@
 
     <!-- CUSTOMER TESTIMONY -->
     <section class="container-fluid customer-testimony">
-      <p class="title fs-1 mb-3 fw-bold text-center">What They Say?</p>
+      <p class="title fs-1 mb-3 fw-semibold text-center">What They Say?</p>
       <div class="testimony-content owl-carousel text">
         <div class="single-testimony text-center text-white lh-lg">
           <p>
@@ -398,7 +398,7 @@
 
     <!-- ARTICLE -->
     <section class="container-fluid" id="article">
-      <p class="title fs-1 fw-bold">Latest Article</p>
+      <p class="title fs-1 fw-semibold">Latest Article</p>
       <div class="article owl-carousel" style="gap: 2%">
         <div class="card">
           <img src="assets/img/article.jpg" alt="article-1" />
@@ -469,7 +469,7 @@
 
     <!-- CONTACT -->
     <section class="container-fluid contact bg-grey" id="contact">
-      <p class="title fs-1 fw-bold">Let’s discuss your project!</p>
+      <p class="title fs-1 fw-semibold">Let’s discuss your project!</p>
       <div class="d-grid flex-sm-column r-maps">
         <div class="col c-text text-decoration-none text">
           <div class="row r-info">
