--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li class="nav-item">
             <a href="#services" class="text-decoration-none"><i class="services"></i><span class="menu-text text-dark">Services</span></a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a href="#contact" class="text-decoration-none"><i class="contact"></i><span class="menu-text text-dark">Contact</span></a>
           </li>
         </ul>
@@ -54,7 +54,7 @@
       <div class="container px-4">
         <a class="navbar-brand" href="#homepage"><img src="assets/img/LOGO TRICOM-04 1.png" alt="Tricom" width="60" height="50" /></a>
         <button class="navbar-toggler border-0" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-          <span class="navbar-toggler-icon"></span>
+          <i class="bi bi-list" style="color: #0659a7; font-size: 2rem; margin-right: -1rem;"></i>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
@@ -62,9 +62,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="navbar-nav offcanvas-body text">
-            <hr class="text-success" />
-            <a class="nav-link my-3" href="#about-us">About Us</a>
-            <hr class="text-success" />
+            <a class="nav-link my-3" style="padding-top: 1.5rem; border-top-width: 1px; border-top-style: solid; border-top-color: #0659a7;" href="#about-us">About Us</a>
             <a class="nav-link dropdown-toggle my-3" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Services </a>
             <ul class="dropdown-menu text" style="border: none">
               <a class="dropdown-item" href="social-media.html">Social Media</a>
@@ -72,9 +70,12 @@
               <a class="dropdown-item" href="video-production.html">Video Production</a>
               <a class="dropdown-item" href="web-design.html">Web Design</a>
             </ul>
-            <hr class="text-success" />
             <a class="nav-link my-3" href="#contact">Contact</a>
-            <hr class="text-success" />
+          </div>
+          <div class="offcanvas-sosmed mx-5 m-5" style="margin-bottom: 5rem !important;">
+            <p class="text fw-semibold">Follow Us</p>
+            <a class="instagram text-dark me-5" style="font-size: 1.2rem" href="https://www.instagram.com"><i class="bi bi-instagram"></i></a>
+              <a class="youtube text-dark" style="font-size: 1.3rem" href="https://www.youtube.com"><i class="bi bi-youtube"></i></a>
           </div>
         </div>
       </div>
@@ -85,7 +86,7 @@
 
     <!--HOMEPAGE-->
     <div class="container-fluid homepage d-flex" id="homepage">
-      <div class="homepage-body">
+      <div class="homepage-body" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000">
         <p class="title-hp lh-sm text-white">
           Connecting <br />
           Your Brand.
@@ -130,7 +131,7 @@
     <section class="container-fluid about-us" id="about-us">
       <div class="row">
         <div class="col">
-          <div class="card-body text d-grid gap-3">
+          <div class="card-body text d-grid gap-3" data-aos="fade-up" data-aos-duration="2000">
             <p class="card-title fs-3 lh-base fw-semibold">TRICOM Agency is prepared to serve as your company's digital solution.</p>
             <p class="card-text lh-base fw-light">
               Tricom Agency is a full-service digital marketing agency based in Jakarta, Indonesia. We are powered by a team of experts in website, social media, SEO, digital ads, analytics, and marketing who work with a growth mindset to
@@ -139,7 +140,9 @@
             <a href="about-us.html" class="btn btn-primary text text-white rounded-5 border-0 fw-light">Learn More</a>
           </div>
         </div>
-        <div class="col align-self-center">
+        <div class="col align-self-center" data-aos="flip-left"
+        data-aos-easing="ease-out-cubic"
+        data-aos-duration="2000">
           <img src="assets/img/about-us.jpg" class="img-fluid rounded-1" alt="..." />
         </div>
       </div>
@@ -149,8 +152,8 @@
     <!-- OUR SERVICES -->
     <section class="container-fluid services bg-grey" id="services">
       <p class="title fs-1 fw-bold">Our Services</p>
-      <div class="row" id="categories" data-aos="fade-right">
-        <div class="col-md-3">
+      <div class="row" id="categories">
+        <div class="col-md-3" data-aos="fade-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
           <div class="card text-center" id="btncard">
             <ul class="list-group list-group-flush">
               <!-- <li type="button" class="list-group-item">Social media</li>
@@ -161,7 +164,7 @@
           </div>
         </div>
 
-        <div class="col" id="details" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+        <div class="col" id="details" data-aos="fade-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
           <div class="card" id="itm" style="height: 100%">
             <div class="row r-services" id="products">
               <!-- <div id="products"></div> -->
@@ -188,7 +191,7 @@
       <div class="services-content owl-carousel">
         <div class="card">
           <img src="assets/img/photography.jpg" style="height: 25rem" alt="" />
-          <div class="card-body text-center d-grid gap-2">
+          <div class="card-body text-center d-grid gap-2 my-auto">
             <div class="c-title fw-semibold">Social Media</div>
             <div class="text lh-base fw-light">
               Social media has become a crucial component of modern business. With the help of TRICOM, you can effectively and economically engage with customers, create brand recognition, and boost sales.
@@ -210,7 +213,7 @@
           <img src="assets/img/video-production.jpg" style="height: 25rem" alt="" />
           <div class="card-body text-center d-grid gap-2">
             <div class="c-title fw-semibold">Video Production</div>
-            <div class="text lh-base fw-light">Video production has become a crucial component of modern business. With the help of TRICOM, you can effectively and economically engage with customers, create brand recognition.</div>
+            <div class="text lh-base fw-light">Video production has become a crucial component of modern business. With the help of TRICOM, you can effectively and economically engage with customers, create brand recognition, and boost sales.</div>
             <a href="video-production.html" class="btn btn-primary text text-center text-white rounded-5 border-0 fw-light">Learn More</a>
           </div>
         </div>
@@ -261,7 +264,7 @@
     <!-- END -->
 
     <!-- OUR CLIENTS -->
-    <section class="container-fluid our-clients" id="our-clients" data-aos="zoom-in">
+    <section class="container-fluid our-clients" id="our-clients" data-aos="zoom-in" data-aos-duration="2000">
       <p class="title fs-1 fw-bold text-center">Our Satisfied Clients</p>
       <p class="sub-clients text fw-light text-center text-dark">We've have the pleasesure of working with many amazing clients.</p>
       <div class="brand d-grid">
@@ -407,7 +410,7 @@
         <div class="card">
           <img src="assets/img/article.jpg" alt="article-1" />
           <div class="card-body text-center text">
-            <div class="c-title fs-5 fw-semibold mb-2">Hello World!</div>
+            <div class="c-title fw-semibold mb-2">Hello World!</div>
             <div class="text lh-base fw-light">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum unde voluptates aperiam quam rem, aliquid magnam consequuntur quod fugiat labore laudantium odit praesentium ut atque rerum vel commodi quidem quos.
             </div>
@@ -418,7 +421,7 @@
         <div class="card">
           <img src="assets/img/article.jpg" alt="article-2" />
           <div class="card-body text-center text">
-            <div class="c-title fs-5 fw-semibold mb-2">Hello World!</div>
+            <div class="c-title fw-semibold mb-2">Hello World!</div>
             <div class="text lh-base fw-light">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum unde voluptates aperiam quam rem, aliquid magnam consequuntur quod fugiat labore laudantium odit praesentium ut atque rerum vel commodi quidem quos.
             </div>
@@ -429,7 +432,7 @@
         <div class="card">
           <img src="assets/img/article.jpg" alt="article-3" />
           <div class="card-body text-center text">
-            <div class="c-title fs-5 fw-semibold mb-2">Hello World!</div>
+            <div class="c-title fw-semibold mb-2">Hello World!</div>
             <div class="text lh-base fw-light">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum unde voluptates aperiam quam rem, aliquid magnam consequuntur quod fugiat labore laudantium odit praesentium ut atque rerum vel commodi quidem quos.
             </div>
@@ -522,55 +525,54 @@
       <div class="row">
         <div class="col-4 col-sm-0 mb-2 ms-4">
           <!-- <p class="text text-white mb-3" style="font-size: 0.8rem;">Powered by</p> -->
-          <img src="assets/img/trisula-corp.png" alt="" style="width: 33%" />
+          <img src="assets/img/trisula-corp.png" alt="trisula" />
         </div>
 
-        <div class="col-3 mb-2 page">
-          <h5 class="title text-white mb-4">Services</h5>
+        <div class="col-3 page">
+          <h5 class="c-title text-white mb-3 fw-bold">Services</h5>
           <ul class="list-group">
-            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text-decoration-none text-white" href="social-media.html">Social Media</a></li>
-            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text-decoration-none text-white" href="social-media.html">Photography</a></li>
-            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text-decoration-none text-white" href="social-media.html">Video Production</a></li>
-            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text-decoration-none text-white" href="social-media.html">Web Design</a></li>
+            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text text-decoration-none text-white" href="social-media.html">Social Media</a></li>
+            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text text-decoration-none text-white" href="social-media.html">Photography</a></li>
+            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text text-decoration-none text-white" href="social-media.html">Video Production</a></li>
+            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text text-decoration-none text-white" href="social-media.html">Web Design</a></li>
           </ul>
         </div>
 
-        <div class="col-3 mb-2 page">
-          <h5 class="title text-white mb-4">Company</h5>
+        <div class="col-3 page">
+          <h5 class="c-title text-white mb-3 fw-bold">Company</h5>
           <ul class="list-group">
-            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text-decoration-none text-white" href="social-media.html">About Us</a></li>
-            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text-decoration-none text-white" href="social-media.html">Blog</a></li>
+            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text text-decoration-none text-white" href="social-media.html">About Us</a></li>
+            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text text-decoration-none text-white" href="social-media.html">Blog</a></li>
           </ul>
         </div>
 
-        <div class="col mb-2 page">
-          <h5 class="title text-white mb-4">Contact</h5>
+        <div class="col page">
+          <h5 class="c-title text-white mb-3 fw-bold">Contact</h5>
           <ul class="list-group">
-            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text-decoration-none text-white" href="social-media.html">Get in Touch</a></li>
+            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a class="text text-decoration-none text-white" href="social-media.html">Get in Touch</a></li>
           </ul>
         </div>
 
         <hr class="text-success text-white" />
 
         <div class="row r-copyright">
-        <div class="col-10 me-5">
-          <p class="copyright text-white">
-            &copy;
-            <script>
-              document.write(new Date().getFullYear());
-            </script>
-            Tricom. All Rights Reserved
-          </p>
-        </div>
+          <div class="col-10 me-5 my-auto">
+            <p class="copyright text-white">
+              &copy;
+              <script>
+                document.write(new Date().getFullYear());
+              </script>
+              Tricom. All Rights Reserved
+            </p>
+          </div>
 
-        <div class="col">
-          <ul class="social-icons my-3 ps-0">
-            <a class="instagram text-white me-3" style="font-size: 1.2rem" href="https://www.instagram.com"><i class="bi bi-instagram"></i></a>
-            <a class="youtube text-white" style="font-size: 1.3rem" href="https://www.youtube.com"><i class="bi bi-youtube"></i></a>
-          </ul>
+          <div class="col">
+            <ul class="social-icons ps-0">
+              <a class="instagram text-white me-3" style="font-size: 1.2rem" href="https://www.instagram.com"><i class="bi bi-instagram"></i></a>
+              <a class="youtube text-white" style="font-size: 1.3rem" href="https://www.youtube.com"><i class="bi bi-youtube"></i></a>
+            </ul>
+          </div>
         </div>
-      </div>
-
       </div>
     </footer>
     <!-- FOOTER END -->
