--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="container px-4">
         <a class="navbar-brand" href="#homepage"><img src="assets/img/LOGO TRICOM-04 1.png" alt="Tricom" width="60" height="50" /></a>
         <button class="navbar-toggler border-0" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-          <i class="bi bi-list" style="color: #0659a7; font-size: 2rem; margin-right: -1rem;"></i>
+          <i class="bi bi-list" style="color: #0659a7; font-size: 2rem; margin-right: -1rem"></i>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
@@ -62,9 +62,9 @@
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="navbar-nav offcanvas-body text">
-            <a class="nav-link my-3" style="padding-top: 1.5rem; border-top-width: 1px; border-top-style: solid; border-top-color: #0659a7;" href="#about-us">About Us</a>
+            <a class="nav-link my-3" style="padding-top: 1.5rem; border-top-width: 1px; border-top-style: solid; border-top-color: #0659a7" href="#about-us">About Us</a>
             <a class="nav-link dropdown-toggle my-3" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Services </a>
-            <ul class="dropdown-menu text" style="border: none">
+            <ul class="dropdown-menu text">
               <a class="dropdown-item" href="social-media.html">Social Media</a>
               <a class="dropdown-item" href="photography.html">Photography</a>
               <a class="dropdown-item" href="video-production.html">Video Production</a>
@@ -72,10 +72,10 @@
             </ul>
             <a class="nav-link my-3" href="#contact">Contact</a>
           </div>
-          <div class="offcanvas-sosmed mx-5 m-5" style="margin-bottom: 5rem !important;">
+          <div class="offcanvas-sosmed mx-5 m-5" style="margin-bottom: 5rem !important">
             <p class="text fw-semibold">Follow Us</p>
             <a class="instagram text-dark me-5" style="font-size: 1.2rem" href="https://www.instagram.com"><i class="bi bi-instagram"></i></a>
-              <a class="youtube text-dark" style="font-size: 1.3rem" href="https://www.youtube.com"><i class="bi bi-youtube"></i></a>
+            <a class="youtube text-dark" style="font-size: 1.3rem" href="https://www.youtube.com"><i class="bi bi-youtube"></i></a>
           </div>
         </div>
       </div>
@@ -140,9 +140,7 @@
             <a href="about-us.html" class="btn btn-primary text text-white rounded-5 border-0 fw-light">Learn More</a>
           </div>
         </div>
-        <div class="col align-self-center" data-aos="flip-left"
-        data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000">
+        <div class="col align-self-center" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
           <img src="assets/img/about-us.jpg" class="img-fluid rounded-1" alt="..." />
         </div>
       </div>
@@ -213,7 +211,9 @@
           <img src="assets/img/video-production.jpg" style="height: 25rem" alt="" />
           <div class="card-body text-center d-grid gap-2">
             <div class="c-title fw-semibold">Video Production</div>
-            <div class="text lh-base fw-light">Video production has become a crucial component of modern business. With the help of TRICOM, you can effectively and economically engage with customers, create brand recognition, and boost sales.</div>
+            <div class="text lh-base fw-light">
+              Video production has become a crucial component of modern business. With the help of TRICOM, you can effectively and economically engage with customers, create brand recognition, and boost sales.
+            </div>
             <a href="video-production.html" class="btn btn-primary text text-center text-white rounded-5 border-0 fw-light">Learn More</a>
           </div>
         </div>
